bugfix/readmore, shadows, checkbox

--- a/src/pug/article__item_video.pug
+++ b/src/pug/article__item_video.pug
@@ -30,4 +30,6 @@ block articles__section
                 +icon('youtube')
               a.social__item.h2.color-theme-brand.mr-0(href="#")
                 +icon('facebook')
-            a.readmore(href="#") Смотреть на нашем канале
+            a.readmore.d-flex.align-items-center(href="#")
+              span.h5.mr-2 Смотреть на нашем канале
+              +icon('readmore-right','h3 color-theme-brand')
