--- a/src/pug/category.pug
+++ b/src/pug/category.pug
@@ -64,13 +64,13 @@ block wrapper
                     button.btn.text-uppercase.px-5(type="submit") Отправить запрос
 
       .category.category_wide.mb-3
-        .product-list.d-flex.flex-column.box-shadow.border-radius.text-center.text-md-left.p-2.p-md-3.mb-3
+        .product-list.d-flex.flex-column.border-radius.text-center.text-md-left.p-2.p-md-3.mb-3
           .product-list__header
             a.d-block.text-center.mb-3(href="#")
               +img('content/category/category-1.jpg')
             a.product-list__title.d-block.mb-2(href="#") Автоаксессуары
             .h6.color-theme-disabled.mb-3 8 товаров
-          .d-flex.flex-column.justify-content-between.flex-grow-1
+          .d-flex.flex-column.flex-grow-1
             .product-list__body
               a.d-block.h6.color-theme-brand.mb-2(href="#") Антенны автомобильные
               a.d-block.h6.color-theme-brand.mb-2(href="#") Бегунки, Втулки и щетки стартера
@@ -88,13 +88,13 @@ block wrapper
               button.btn.btn_nobg.h-auto.p-0(type="button")
                 +icon('readmore','h3 color-theme-disabled')
 
-        .product-list.d-flex.flex-column.box-shadow.border-radius.text-center.text-md-left.p-2.p-md-3.mb-3
+        .product-list.d-flex.flex-column.border-radius.text-center.text-md-left.p-2.p-md-3.mb-3
           .product-list__header
             a.d-block.text-center.mb-3(href="#")
               +img('content/category/category-2.jpg')
             a.product-list__title.d-block.mb-2(href="#") Автохимия
             .h6.color-theme-disabled.mb-3 8 товаров
-          .d-flex.flex-column.justify-content-between.flex-grow-1
+          .d-flex.flex-column.flex-grow-1
             .product-list__body
               a.d-block.h6.mb-2(href="#") Автоэмаль чернозем (Просто ГряZ) (520 мл) BGS 90046
               a.d-block.h6.mb-2(href="#") SAA-0781 Ароматизатор подвесной For him (paper)
@@ -104,13 +104,13 @@ block wrapper
               button.btn.btn_nobg.h-auto.p-0(type="button")
                 +icon('readmore','h3 color-theme-disabled')
 
-        .product-list.d-flex.flex-column.box-shadow.border-radius.text-center.text-md-left.p-2.p-md-3.mb-3
+        .product-list.d-flex.flex-column.border-radius.text-center.text-md-left.p-2.p-md-3.mb-3
           .product-list__header
             a.d-block.text-center.mb-3(href="#")
               +img('content/category/category-3.jpg')
             a.product-list__title.d-block.mb-2(href="#") Авточехлы
             .h6.color-theme-disabled.mb-3 8 товаров
-          .d-flex.flex-column.justify-content-between.flex-grow-1
+          .d-flex.flex-column.flex-grow-1
             .product-list__body
               a.d-block.h6.mb-2(href="#") Авточехол Автопилот из экокожи Стандарт для LADA
               a.d-block.h6.mb-2(href="#") Авточехол Автопилот из экокожи Стандарт для
@@ -120,13 +120,13 @@ block wrapper
               button.btn.btn_nobg.h-auto.p-0(type="button")
                 +icon('readmore','h3 color-theme-disabled')
 
-        .product-list.d-flex.flex-column.box-shadow.border-radius.text-center.text-md-left.p-2.p-md-3.mb-3
+        .product-list.d-flex.flex-column.border-radius.text-center.text-md-left.p-2.p-md-3.mb-3
           .product-list__header
             a.d-block.text-center.mb-3(href="#")
               +img('content/category/category-4.jpg')
             a.product-list__title.d-block.mb-2(href="#") Автоэлектроника
             .h6.color-theme-disabled.mb-3 8 товаров
-          .d-flex.flex-column.justify-content-between.flex-grow-1
+          .d-flex.flex-column.flex-grow-1
             .product-list__body
               a.d-block.h6.color-theme-brand.mb-2(href="#") Видеорегистраторы
               a.d-block.h6.mb-2(href="#") Видеорегистратор Playme NETTON, 2 камеры
@@ -137,13 +137,13 @@ block wrapper
               button.btn.btn_nobg.h-auto.p-0(type="button")
                 +icon('readmore','h3 color-theme-disabled')
 
-        .product-list.d-flex.flex-column.box-shadow.border-radius.text-center.text-md-left.p-2.p-md-3.mb-3
+        .product-list.d-flex.flex-column.border-radius.text-center.text-md-left.p-2.p-md-3.mb-3
           .product-list__header
             a.d-block.text-center.mb-3(href="#")
               +img('content/category/category-5.jpg')
             a.product-list__title.d-block.mb-2(href="#") Амортизаторы / стойки
             .h6.color-theme-disabled.mb-3 8 товаров
-          .d-flex.flex-column.justify-content-between.flex-grow-1
+          .d-flex.flex-column.flex-grow-1
             .product-list__body
               a.d-block.h6.mb-2(href="#") Амортизатор | зад |
               a.d-block.h6.mb-2(href="#") Амортизатор AUDI A4 07/00-09/01/VW PASSAT 09/
@@ -154,13 +154,13 @@ block wrapper
               button.btn.btn_nobg.h-auto.p-0(type="button")
                 +icon('readmore','h3 color-theme-disabled')
 
-        .product-list.d-flex.flex-column.box-shadow.border-radius.text-center.text-md-left.p-2.p-md-3.mb-3
+        .product-list.d-flex.flex-column.border-radius.text-center.text-md-left.p-2.p-md-3.mb-3
           .product-list__header
             a.d-block.text-center.mb-3(href="#")
               +img('content/category/category-6.jpg')
             a.product-list__title.d-block.mb-2(href="#") Ароматизаторы
             .h6.color-theme-disabled.mb-3 8 товаров
-          .d-flex.flex-column.justify-content-between.flex-grow-1
+          .d-flex.flex-column.flex-grow-1
             .product-list__body
               a.d-block.h6.mb-2(href="#") Ароматизатор подвесной CONTEX SEX QUEEN (слад.
               a.d-block.h6.mb-2(href="#") Ароматизатор подвесной CONTEX SEX FIRST (прохлад
@@ -170,13 +170,13 @@ block wrapper
               button.btn.btn_nobg.h-auto.p-0(type="button")
                 +icon('readmore','h3 color-theme-disabled')
 
-        .product-list.d-flex.flex-column.box-shadow.border-radius.text-center.text-md-left.p-2.p-md-3.mb-3
+        .product-list.d-flex.flex-column.border-radius.text-center.text-md-left.p-2.p-md-3.mb-3
           .product-list__header
             a.d-block.text-center.mb-3(href="#")
               +img('content/category/category-2.jpg')
             a.product-list__title.d-block.mb-2(href="#") Автохимия
             .h6.color-theme-disabled.mb-3 8 товаров
-          .d-flex.flex-column.justify-content-between.flex-grow-1
+          .d-flex.flex-column.flex-grow-1
             .product-list__body
               a.d-block.h6.mb-2(href="#") Автоэмаль чернозем (Просто ГряZ) (520 мл) BGS 90046
               a.d-block.h6.mb-2(href="#") SAA-0781 Ароматизатор подвесной For him (paper)
@@ -186,13 +186,13 @@ block wrapper
               button.btn.btn_nobg.h-auto.p-0(type="button")
                 +icon('readmore','h3 color-theme-disabled')
 
-        .product-list.d-flex.flex-column.box-shadow.border-radius.text-center.text-md-left.p-2.p-md-3.mb-3
+        .product-list.d-flex.flex-column.border-radius.text-center.text-md-left.p-2.p-md-3.mb-3
           .product-list__header
             a.d-block.text-center.mb-3(href="#")
               +img('content/category/category-4.jpg')
             a.product-list__title.d-block.mb-2(href="#") Автоэлектроника
             .h6.color-theme-disabled.mb-3 8 товаров
-          .d-flex.flex-column.justify-content-between.flex-grow-1
+          .d-flex.flex-column.flex-grow-1
             .product-list__body
               a.d-block.h6.color-theme-brand.mb-2(href="#") Видеорегистраторы
               a.d-block.h6.mb-2(href="#") Видеорегистратор Playme NETTON, 2 камеры
@@ -203,13 +203,13 @@ block wrapper
               button.btn.btn_nobg.h-auto.p-0(type="button")
                 +icon('readmore','h3 color-theme-disabled')
 
-        .product-list.d-flex.flex-column.box-shadow.border-radius.text-center.text-md-left.p-2.p-md-3.mb-3
+        .product-list.d-flex.flex-column.border-radius.text-center.text-md-left.p-2.p-md-3.mb-3
           .product-list__header
             a.d-block.text-center.mb-3(href="#")
               +img('content/category/category-1.jpg')
             a.product-list__title.d-block.mb-2(href="#") Автоаксессуары
             .h6.color-theme-disabled.mb-3 8 товаров
-          .d-flex.flex-column.justify-content-between.flex-grow-1
+          .d-flex.flex-column.flex-grow-1
             .product-list__body
               a.d-block.h6.color-theme-brand.mb-2(href="#") Антенны автомобильные
               a.d-block.h6.color-theme-brand.mb-2(href="#") Бегунки, Втулки и щетки стартера
@@ -221,13 +221,13 @@ block wrapper
               button.btn.btn_nobg.h-auto.p-0(type="button")
                 +icon('readmore','h3 color-theme-disabled')
 
-        .product-list.d-flex.flex-column.box-shadow.border-radius.text-center.text-md-left.p-2.p-md-3.mb-3
+        .product-list.d-flex.flex-column.border-radius.text-center.text-md-left.p-2.p-md-3.mb-3
           .product-list__header
             a.d-block.text-center.mb-3(href="#")
               +img('content/category/category-2.jpg')
             a.product-list__title.d-block.mb-2(href="#") Автохимия
             .h6.color-theme-disabled.mb-3 8 товаров
-          .d-flex.flex-column.justify-content-between.flex-grow-1
+          .d-flex.flex-column.flex-grow-1
             .product-list__body
               a.d-block.h6.mb-2(href="#") Автоэмаль чернозем (Просто ГряZ) (520 мл) BGS 90046
               a.d-block.h6.mb-2(href="#") SAA-0781 Ароматизатор подвесной For him (paper)
@@ -237,13 +237,13 @@ block wrapper
               button.btn.btn_nobg.h-auto.p-0(type="button")
                 +icon('readmore','h3 color-theme-disabled')
 
-        .product-list.d-flex.flex-column.box-shadow.border-radius.text-center.text-md-left.p-2.p-md-3.mb-3
+        .product-list.d-flex.flex-column.border-radius.text-center.text-md-left.p-2.p-md-3.mb-3
           .product-list__header
             a.d-block.text-center.mb-3(href="#")
               +img('content/category/category-5.jpg')
             a.product-list__title.d-block.mb-2(href="#") Амортизаторы / стойки
             .h6.color-theme-disabled.mb-3 8 товаров
-          .d-flex.flex-column.justify-content-between.flex-grow-1
+          .d-flex.flex-column.flex-grow-1
             .product-list__body
               a.d-block.h6.mb-2(href="#") Амортизатор | зад |
               a.d-block.h6.mb-2(href="#") Амортизатор AUDI A4 07/00-09/01/VW PASSAT 09/
@@ -254,13 +254,13 @@ block wrapper
               button.btn.btn_nobg.h-auto.p-0(type="button")
                 +icon('readmore','h3 color-theme-disabled')
 
-        .product-list.d-flex.flex-column.box-shadow.border-radius.text-center.text-md-left.p-2.p-md-3.mb-3
+        .product-list.d-flex.flex-column.border-radius.text-center.text-md-left.p-2.p-md-3.mb-3
           .product-list__header
             a.d-block.text-center.mb-3(href="#")
               +img('content/category/category-4.jpg')
             a.product-list__title.d-block.mb-2(href="#") Автоэлектроника
             .h6.color-theme-disabled.mb-3 8 товаров
-          .d-flex.flex-column.justify-content-between.flex-grow-1
+          .d-flex.flex-column.flex-grow-1
             .product-list__body
               a.d-block.h6.color-theme-brand.mb-2(href="#") Видеорегистраторы
               a.d-block.h6.mb-2(href="#") Видеорегистратор Playme NETTON, 2 камеры
@@ -271,13 +271,13 @@ block wrapper
               button.btn.btn_nobg.h-auto.p-0(type="button")
                 +icon('readmore','h3 color-theme-disabled')
 
-        .product-list.d-flex.flex-column.box-shadow.border-radius.text-center.text-md-left.p-2.p-md-3.mb-3
+        .product-list.d-flex.flex-column.border-radius.text-center.text-md-left.p-2.p-md-3.mb-3
           .product-list__header
             a.d-block.text-center.mb-3(href="#")
               +img('content/category/category-6.jpg')
             a.product-list__title.d-block.mb-2(href="#") Ароматизаторы
             .h6.color-theme-disabled.mb-3 8 товаров
-          .d-flex.flex-column.justify-content-between.flex-grow-1
+          .d-flex.flex-column.flex-grow-1
             .product-list__body
               a.d-block.h6.mb-2(href="#") Ароматизатор подвесной CONTEX SEX QUEEN (слад.
               a.d-block.h6.mb-2(href="#") Ароматизатор подвесной CONTEX SEX FIRST (прохлад
@@ -287,13 +287,13 @@ block wrapper
               button.btn.btn_nobg.h-auto.p-0(type="button")
                 +icon('readmore','h3 color-theme-disabled')
 
-        .product-list.d-flex.flex-column.box-shadow.border-radius.text-center.text-md-left.p-2.p-md-3.mb-3
+        .product-list.d-flex.flex-column.border-radius.text-center.text-md-left.p-2.p-md-3.mb-3
           .product-list__header
             a.d-block.text-center.mb-3(href="#")
               +img('content/category/category-5.jpg')
             a.product-list__title.d-block.mb-2(href="#") Амортизаторы / стойки
             .h6.color-theme-disabled.mb-3 8 товаров
-          .d-flex.flex-column.justify-content-between.flex-grow-1
+          .d-flex.flex-column.flex-grow-1
             .product-list__body
               a.d-block.h6.mb-2(href="#") Амортизатор | зад |
               a.d-block.h6.mb-2(href="#") Амортизатор AUDI A4 07/00-09/01/VW PASSAT 09/
@@ -304,13 +304,13 @@ block wrapper
               button.btn.btn_nobg.h-auto.p-0(type="button")
                 +icon('readmore','h3 color-theme-disabled')
 
-        .product-list.d-flex.flex-column.box-shadow.border-radius.text-center.text-md-left.p-2.p-md-3.mb-3
+        .product-list.d-flex.flex-column.border-radius.text-center.text-md-left.p-2.p-md-3.mb-3
           .product-list__header
             a.d-block.text-center.mb-3(href="#")
               +img('content/category/category-6.jpg')
             a.product-list__title.d-block.mb-2(href="#") Ароматизаторы
             .h6.color-theme-disabled.mb-3 8 товаров
-          .d-flex.flex-column.justify-content-between.flex-grow-1
+          .d-flex.flex-column.flex-grow-1
             .product-list__body
               a.d-block.h6.mb-2(href="#") Ароматизатор подвесной CONTEX SEX QUEEN (слад.
               a.d-block.h6.mb-2(href="#") Ароматизатор подвесной CONTEX SEX FIRST (прохлад
@@ -320,13 +320,13 @@ block wrapper
               button.btn.btn_nobg.h-auto.p-0(type="button")
                 +icon('readmore','h3 color-theme-disabled')
 
-        .product-list.d-flex.flex-column.box-shadow.border-radius.text-center.text-md-left.p-2.p-md-3.mb-3
+        .product-list.d-flex.flex-column.border-radius.text-center.text-md-left.p-2.p-md-3.mb-3
           .product-list__header
             a.d-block.text-center.mb-3(href="#")
               +img('content/category/category-2.jpg')
             a.product-list__title.d-block.mb-2(href="#") Автохимия
             .h6.color-theme-disabled.mb-3 8 товаров
-          .d-flex.flex-column.justify-content-between.flex-grow-1
+          .d-flex.flex-column.flex-grow-1
             .product-list__body
               a.d-block.h6.mb-2(href="#") Автоэмаль чернозем (Просто ГряZ) (520 мл) BGS 90046
               a.d-block.h6.mb-2(href="#") SAA-0781 Ароматизатор подвесной For him (paper)
@@ -336,13 +336,13 @@ block wrapper
               button.btn.btn_nobg.h-auto.p-0(type="button")
                 +icon('readmore','h3 color-theme-disabled')
 
-        .product-list.d-flex.flex-column.box-shadow.border-radius.text-center.text-md-left.p-2.p-md-3.mb-3
+        .product-list.d-flex.flex-column.border-radius.text-center.text-md-left.p-2.p-md-3.mb-3
           .product-list__header
             a.d-block.text-center.mb-3(href="#")
               +img('content/category/category-4.jpg')
             a.product-list__title.d-block.mb-2(href="#") Автоэлектроника
             .h6.color-theme-disabled.mb-3 8 товаров
-          .d-flex.flex-column.justify-content-between.flex-grow-1
+          .d-flex.flex-column.flex-grow-1
             .product-list__body
               a.d-block.h6.color-theme-brand.mb-2(href="#") Видеорегистраторы
               a.d-block.h6.mb-2(href="#") Видеорегистратор Playme NETTON, 2 камеры
@@ -353,13 +353,13 @@ block wrapper
               button.btn.btn_nobg.h-auto.p-0(type="button")
                 +icon('readmore','h3 color-theme-disabled')
 
-        .product-list.d-flex.flex-column.box-shadow.border-radius.text-center.text-md-left.p-2.p-md-3.mb-3
+        .product-list.d-flex.flex-column.border-radius.text-center.text-md-left.p-2.p-md-3.mb-3
           .product-list__header
             a.d-block.text-center.mb-3(href="#")
               +img('content/category/category-1.jpg')
             a.product-list__title.d-block.mb-2(href="#") Автоаксессуары
             .h6.color-theme-disabled.mb-3 8 товаров
-          .d-flex.flex-column.justify-content-between.flex-grow-1
+          .d-flex.flex-column.flex-grow-1
             .product-list__body
               a.d-block.h6.color-theme-brand.mb-2(href="#") Антенны автомобильные
               a.d-block.h6.color-theme-brand.mb-2(href="#") Бегунки, Втулки и щетки стартера
