--- a/src/pug/position.pug
+++ b/src/pug/position.pug
@@ -167,7 +167,7 @@ block wrapper
                   +icon('share','h3 color-theme-brand mr-2')
                   | Рассказать друзьям
                 a.readmore.d-flex.align-items-center(href="#")
-                  span.mr-2 Смотреть на нашем канале
+                  span.h5.mr-2 Смотреть на нашем канале
                   +icon('readmore-right','h3 color-theme-brand')
         .tab-pane.fade.show.px-lg-3(id="pos-desc" role="tabpanel" action="#")
         .tab-pane.fade.show.px-lg-3.active(id="pos-reviews" role="tabpanel" action="#")
