--- a/src/scss/tpl/_form.scss
+++ b/src/scss/tpl/_form.scss
@@ -139,14 +139,16 @@
 }
 
 .form__toggler {
-  & ~ .form__label {
+  & + .error + .form__label,
+  & + .form__label {
     @extend %flex-item;
   }
 
   &.form__toggler_checkbox {
     @extend %toggler-default;
 
-    & ~ .form__label {
+    & + .error + .form__label,
+    & + .form__label {
       .form__label-icon {
         @extend %flex-column;
         @include fw(24px);
@@ -170,7 +172,8 @@
     }
 
     &:checked {
-      & ~ .form__label {
+      & + .error + .form__label,
+      & + .form__label {
         .form__label-icon {
           &:before {
             opacity: 1;
@@ -183,7 +186,8 @@
   &.form__toggler_radio {
     @extend %toggler-default;
 
-    & ~ .form__label {
+    & + .error + .form__label,
+    & + .form__label {
       @extend %toggler-theme;
 
       &.form__label_lg {
@@ -194,7 +198,8 @@
     }
 
     &:checked {
-      & ~ .form__label {
+      & + .error + .form__label,
+      & + .form__label {
         @extend %toggler-theme-current;
       }
     }
@@ -203,7 +208,7 @@
   &.form__toggler_dot {
     @extend %toggler-default;
 
-    & ~ .form__label {
+    & + .form__label {
       @include before;
 
       &:before {
@@ -228,7 +233,7 @@
     }
 
     &:checked {
-      & ~ .form__label {
+      & + .form__label {
         &:after {
           background: $color__brand;
         }
